<resources>
    <string name="app_name">Jetpack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="welcome_to_jetpack">Welcome to Jetpack</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="role">Role</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">Sign up</string>
    <string name="click_back_to_exit">Please click BACK again to exit</string>
</resources>