<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.utildev.jetpack.presentation.activity.auth.AuthViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_20dp"
        android:elevation="@dimen/_5dp"
        app:cardCornerRadius="@dimen/_5dp"
        tools:context=".presentation.fragment.auth.SignUpFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_30dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="@dimen/_5dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <EditText
                    android:id="@+id/fmSignUp_etFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10dp"
                    android:background="@drawable/shape_corner_gray"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:paddingStart="@dimen/_5dp"
                    android:paddingTop="@dimen/_10dp"
                    android:paddingEnd="@dimen/_5dp"
                    android:paddingBottom="@dimen/_10dp"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12dp"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="Autofill,LabelFor,TextFields" />

                <EditText
                    android:id="@+id/fmSignUp_etLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10dp"
                    android:background="@drawable/shape_corner_gray"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:paddingStart="@dimen/_5dp"
                    android:paddingTop="@dimen/_10dp"
                    android:paddingEnd="@dimen/_5dp"
                    android:paddingBottom="@dimen/_10dp"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="Autofill,LabelFor,TextFields" />

                <EditText
                    android:id="@+id/fmSignUp_etEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:background="@drawable/shape_corner_gray"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_5dp"
                    android:paddingTop="@dimen/_10dp"
                    android:paddingEnd="@dimen/_5dp"
                    android:paddingBottom="@dimen/_10dp"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fmSignUp_etFirstName"
                    tools:ignore="Autofill,LabelFor,TextFields" />

                <EditText
                    android:id="@+id/fmSignUp_etPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:background="@drawable/shape_corner_gray"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_5dp"
                    android:paddingTop="@dimen/_10dp"
                    android:paddingEnd="@dimen/_5dp"
                    android:paddingBottom="@dimen/_10dp"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fmSignUp_etEmail"
                    tools:ignore="Autofill,LabelFor,TextFields" />

                <TextView
                    android:id="@+id/fmSignUp_tvRole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/role"
                    android:textSize="@dimen/_12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fmSignUp_etPassword" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fmSignUp_rvRole"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:overScrollMode="never"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fmSignUp_tvRole" />

                <TextView
                    android:id="@+id/fmSignUp_tvSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:background="@drawable/pressed_corner_primary"
                    android:padding="@dimen/_10dp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textColor="@color/background"
                    android:textSize="@dimen/_15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fmSignUp_rvRole" />

                <TextView
                    android:id="@+id/fmSignUp_tvSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:background="@drawable/pressed_corner_green"
                    android:paddingStart="@dimen/_50dp"
                    android:paddingTop="@dimen/_10dp"
                    android:paddingEnd="@dimen/_50dp"
                    android:paddingBottom="@dimen/_10dp"
                    android:text="@string/sign_in"
                    android:textAlignment="center"
                    android:textColor="@color/background"
                    android:textSize="@dimen/_15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fmSignUp_tvSignUp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.cardview.widget.CardView>
</layout>